--- a/Module 2. Basics. Node.js fundamental theory./package.json
+++ b/Module 2. Basics. Node.js fundamental theory./package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "task1": "nodemon ./task1/index.js",
     "task1rl": "nodemon ./task1/index-rl.js",
-    "task2": "echo \"Error: no test specified\" && exit 1",
+    "task2": "nodemon ./task2/index.js ./task2/nodejs-hw1-ex1.csv ./task2/books.txt",
     "task3": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/ReshetovItsMe/learn-nodejs-hw#readme",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "nodemon": "^2.0.7"
   }
 }
