--- a/Module 2. Basics. Node.js fundamental theory./package.json
+++ b/Module 2. Basics. Node.js fundamental theory./package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/ReshetovItsMe/learn-nodejs-hw#readme",
   "dependencies": {
+    "byline": "^5.0.0",
     "csvtojson": "^2.0.10"
   },
   "devDependencies": {
