--- a/Module 2. Basics. Node.js fundamental theory./task3/package.json
+++ b/Module 2. Basics. Node.js fundamental theory./task3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-nodejs-hw",
+  "name": "learn-nodejs-hw-module2",
   "version": "1.0.0",
   "description": "This is project for home tasks which were made in EPAM NodeJS course",
   "main": "index.js",
