--- a/Module 2. Basics. Node.js fundamental theory./package.json
+++ b/Module 2. Basics. Node.js fundamental theory./package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "task1": "nodemon ./task1/index.js",
-    "task1rl": "nodemon ./task1/index-rl.js",
+    "task1rl": "nodemon ./task1/.js",
     "task2": "nodemon ./task2/index.js ./task2/nodejs-hw1-ex1.csv ./task2/books.txt",
-    "task2pipe": "nodemon ./task2/index-pipe.js ./task2/nodejs-hw1-ex1.csv ./task2/books.txt"
+    "task2norl": "nodemon ./task2/index-noreadline.js ./task2/nodejs-hw1-ex1.csv ./task2/books.txt"
   },
   "repository": {
     "type": "git",
