--- a/Module 4. PostgreSQL and layered architecture./package.json
+++ b/Module 4. PostgreSQL and layered architecture./package.json
@@ -4,7 +4,7 @@
   "description": "This is project for home tasks which were made in EPAM NodeJS course",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e ts -w ./src src/app.ts",
+    "start:dev": "nodemon -r dotenv/config -e ts -w ./src src/app.ts",
     "lint": "eslint src --ext .ts,.tsx src/"
   },
   "repository": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ReshetovItsMe/learn-nodejs-hw#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "pg": "^8.5.1",
@@ -32,12 +33,12 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
     "@types/express": "^4.17.11",
     "@types/joi": "^17.2.3",
+    "@types/node": "^14.14.35",
     "@types/validator": "^13.1.3",
-    "@types/node": "^14.14.34",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "nodemon": "^2.0.7",
