--- a/Module_7_JWT_authorization_and_CORS/.env
+++ b/Module_7_JWT_authorization_and_CORS/.env
@@ -2,3 +2,4 @@ DATABASE=wafbzbyy
 DATABASE_USER=wafbzbyy
 DATABASE_PASSWORD=p-9xLF0rUtLZnWoyGhUiLvWvv20GuZxO
 HOST=dumbo.db.elephantsql.com
+TOKEN_SECRET=testMySecretForJwt
