--- a/Module_7_JWT_authorization_and_CORS/package.json
+++ b/Module_7_JWT_authorization_and_CORS/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "response-time": "^2.3.2",
@@ -41,6 +42,7 @@
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "nodemon": "^2.0.7",
