--- a/Module_7_JWT_authorization_and_CORS/package.json
+++ b/Module_7_JWT_authorization_and_CORS/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ReshetovItsMe/learn-nodejs-hw#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
@@ -36,13 +37,14 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
-    "@types/jsonwebtoken": "^8.5.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "nodemon": "^2.0.7",
