[Module 7] clean code, bcrypt hash

--- a/Module_7_JWT_authorization_and_CORS/package.json
+++ b/Module_7_JWT_authorization_and_CORS/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ReshetovItsMe/learn-nodejs-hw#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -37,6 +38,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/joi": "^17.2.3",
